# ClionOpenGLSetUp-Mac

./: CMakeLists.txt  README.md  main.cpp  shader.h
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
dependencies/: CMakeLists.txt
glm/include/glm/: CMakeLists.txt  common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
glm/include/glm/detail/: func_common_simd.inl  func_exponential_simd.inl  func_geometric_simd.inl  func_integer_simd.inl  func_matrix.hpp  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  setup.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_vec1.hpp
glm/include/glm/gtc/: matrix_transform.hpp  quaternion.hpp  type_aligned.hpp  type_precision.hpp  type_ptr.hpp
glm/include/glm/gtx/: gradient_paint.hpp  hash.hpp  intersect.hpp  io.hpp  io.inl  matrix_query.hpp  norm.hpp  normalize_dot.hpp  perpendicular.hpp  quaternion.hpp  rotate_vector.hpp  simd_mat4.hpp  simd_quat.hpp  spline.hpp  string_cast.hpp  transform2.hpp  type_trait.hpp  vector_angle.hpp
